components/monitoring/grafana/deployment.yaml
# vscode-kubernetes-tools: exclude
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: appstudio-workload-monitoring
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        deploymentconfig: grafana
    spec:
      containers:
      - name: grafana
        args:
        - -config=/etc/grafana/grafana.ini
        image: docker.io/grafana/grafana:9.1.6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        # Grafana configuration
        - mountPath: /etc/grafana
          name: grafana-config
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /etc/grafana/provisioning/notifiers
          name: grafana-notifiers
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
        - mountPath: /var/lib/grafana/dashboards
          name: grafana-dashboard-definitions
      - name: grafana-oauth2-proxy
        args:
        - --provider=github
        - --https-address=:3000
        - --email-domain=*
        - --upstream=http://localhost:3001
        - --tls-cert-file=/etc/tls/private/tls.crt
        - --tls-key-file=/etc/tls/private/tls.key
        - --skip-auth-regex=^/metrics
        - --github-org=codeready-toolchain-teams
        - --github-team=observability
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 20m
            memory: 50Mi
        ports:
        - containerPort: 3000
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: https
          timeoutSeconds: 1
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/tls/private
          name: secret-grafana-tls
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: grafana
      serviceAccountName: grafana
      terminationGracePeriodSeconds: 30
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-notifiers
        emptyDir: {}
      - name: grafana-datasources
        projected:
          sources:
          # 1 secret per cluster where metrics are collected
          - secret:
              name: thanos-querier-ds
              items:
              - key: thanos-querier-ds.yaml
                path: thanos-querier-ds.yaml
          # 1 secret per cdcluster where logs are collected
          - secret:
              name: loki-ds
              items:
              - key: loki-ds.yaml
                path: loki-ds.yaml
      - name: grafana-config
        secret:
          defaultMode: 420
          secretName: grafana-config
      - name: grafana-dashboards
        configMap:
          defaultMode: 420
          name: grafana-dashboards
      - name: grafana-dashboard-definitions
        configMap:
          name: grafana-dashboard-definitions
      - name: secret-grafana-tls
        secret:
          defaultMode: 420
          secretName: grafana-tls
