components/monitoring/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-tls
  labels:
    app: grafana
spec:
  ports:
  - name: https
    port: 3000
    protocol: TCP
    targetPort: https
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
